clusters/main/kubernetes/apps/hoarder/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hoarder-app-template
spec:
  selector:
    app.kubernetes.io/name: karakeep
    app.kubernetes.io/instance: hoarder
  ports:
    - name: main
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
